[package]
name = "sombervale"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
bitflags = "1.3"
env_logger = "0.9"
getrandom = "0.2"
kira = { version = "0.5", default-features = false, features = ["ogg"] }
log = "0.4"
pixels = "0.5"
png-decoder = "0.1"
randomize = "3.0"
shipyard = { version = "0.5", default-features = false, features = ["std", "thread_local"] }
tiled = { version = "0.9", default-features = false }
ultraviolet = "0.8"
winit = "0.25"
winit_input_helper = "0.10"

line_drawing = { version = "1.0", optional = true }
tiff = { version = "0.7", optional = true }

[features]
debug-mode = ["tiff", "line_drawing"]
